--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: build
 on:
   pull_request:
     branches: [ master ]
+  workflow_dispatch
 
 jobs:
   build:
@@ -13,6 +14,7 @@ jobs:
       with:
         ref: 'v2.0-refactor'
     - name: build
+      run: conda activate dedalus
       run: pip install -e .
     - name: test
       run: pytest 
