Eliminate conda run from workflows
* conda run is apparantly experimental and not for production use
* it fails to return exit codes, so failing pytests were marked as
  passing the build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,10 @@ jobs:
       with:
         ref: 'v2.0-refactor'
     - name: build
-      run: conda run -n dedalus pip install -e .
+      run: /usr/share/miniconda/envs/dedalus/bin/pip install -e .
         
     - name: test
-      run: conda run -n dedalus pytest 
+      run: /usr/share/miniconda/envs/dedalus/bin/pytest
+        
+        
         
